--- a/index.html
+++ b/index.html
@@ -2,179 +2,110 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Editor!</title>
 
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="node_modules/flat-ui/css/flat-ui.css">
+    <script type="text/javascript"> var looping = false; </script>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
+    <!--script src="https://vjs.zencdn.net/ie8/ie8-version/videojs-ie8.min.js"></script-->
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
-
-    <script src="https://unpkg.com/vue"></script>
-    <script src="https://unpkg.com/vuex"></script>
+    <link rel = 'stylesheet' href='app/layout/player.css'/>
 
   </head>
 
   <body>
 
-    <div class="pane pane-main p-3">
-
-
-
-        <div id="app-title">
-          <h5>
-            {{productName||name}}
-            <div class="small text-muted" style="font-size: .9rem;">{{description}}</div>
-          </h5>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-10">
+          <section id='playerContainer'>
+            <video class="video-js" controls preload="auto" data-setup="{}" id='videoContainer'>
+              <source src="http://iurevych.github.com/Flat-UI-videos/big_buck_bunny.mp4" type="video/mp4">
+              <source src="http://iurevych.github.com/Flat-UI-videos/big_buck_bunny.webm" type="video/webm">
+            </video>
+          </section>
         </div>
+        <div class="col-sm-2" id="panel">
+          <h3>{{data.video}}</h3>
+            <div id="accordion" class="mb-3" role="tablist" aria-multiselectable="true">
+              <div class="card" v-for="edition in data.editions">
+                <div class="card-header" role="tab" id="headingOne">
+                  <a data-toggle="collapse" data-parent="#accordion" :href="collapse_id(edition.id, true)" aria-expanded="true" aria-controls="collapseOne">
+                    {{edition.name}} <span class="badge badge-secondary" v-on:click="viewEdits(edition.edits)">{{edition.total_editions}}</span>
+                  </a>
+                </div>
 
-        <hr>
+                <div :id="collapse_id(edition.id)" class="collapse" role="tabpanel" aria-labelledby="headingOne">
+                  <div class="card-block p-3">
 
-        <div id="app-inbox-menu" class="p-3"></div>
-
-        <div class="p-3">
-
-           <h5><i class="fa fa-inbox fa-1x text-secondary"></i> Products <span class="badge badge-danger">10,000</span></h5>
-
-          <div class="m-3">
-            <i class="fa fa-inbox text-secondary"></i> Construction <span class="badge badge-secondary">87%</span>
-          </div>
-
-          <div class="m-3">
-            <i class="fa fa-inbox text-secondary"></i> Sales <span class="badge badge-secondary">9,000</span>
-          </div>
-
-        </div>
-
-
-
-    </div>
-
-    <div class="pane pane-list p-3">
-
-      <div id="app-inbox" class="p-3"></div>
-
-      <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-        <div id="accordion" class="mb-3" role="tablist" aria-multiselectable="true">
-          <div class="card">
-            <div class="card-header" role="tab" id="headingOne">
-              <h5 class="mb-0">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  Collapsible Group Item #1
-                </a>
-              </h5>
-            </div>
-
-            <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
-              <div class="card-block p-3">
-
-                <div id="app"></div>
-
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    <ul class="list-group">
+                      <li class="list-group-item" v-for="edit in edition.edits" v-on:click="viewEdit(edit)">{{edit.start_time}} - {{edit.stop_time}}</li>
+                    </ul>
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="card">
-            <div class="card-header" role="tab" id="headingTwo">
-              <h5 class="mb-0">
-                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Collapsible Group Item #2
-                </a>
-              </h5>
+            <div class="form-group">
+              <textarea v-model="input" placeholder="Copiar aquí la edición" class="form-control"></textarea>
+              <button class="btn btn-success" style="width: 100%;" v-on:click="parseData(input)" >Cargar edicion</button>
             </div>
-            <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
-              <div class="card-block p-3">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-header" role="tab" id="headingThree">
-              <h5 class="mb-0">
-                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  Collapsible Group Item #3
-                </a>
-              </h5>
-            </div>
-            <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
-              <div class="card-block p-3">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-
-
-                <ul class="list-group mb-3">
-                  <li class="list-group-item active"> Node.js <script>document.write(process.versions.node)</script> </li>
-                  <li class="list-group-item"> Chromium <script>document.write(process.versions.chrome)</script> </li>
-                  <li class="list-group-item"> Electron <script>document.write(process.versions.electron)</script> </li>
-                  <li class="list-group-item"> jQuery 3.1.1.slim </li>
-                  <li class="list-group-item"> Vue <script>document.write(Vue.version)</script> </li>
-                </ul>
-
-                <form id="emitter-example-form" class="bg-faded p-3">
-                  <div class="form-group row">
-                    <label class="col-sm-12 col-form-label">Event Emitter Example</label>
-                  </div>
-                  <div class="form-group">
-                    <label for="exampleSelect1">Select Event</label>
-                    <select class="form-control" id="event-name-select">
-                      <option>background-color</option>
-                      <option>foreground-color</option>
-                    </select>
-                  </div>
-                  <div class="form-group row">
-                    <label for="example-color-input" class="col-2 col-form-label">Select Color</label>
-                    <div class="col-10">
-                      <input class="form-control" type="color" value="#297ce8" id="example-color-input">
-                    </div>
-                  </div>
-                  <button type="submit" class="btn btn-primary">Emit</button>
-                </form>
-
-
-    </div>
-
-    <div class="pane pane-data p-3">
-
-      <div class="card">
-        <img class="card-img-top" src="https://unsplash.it/200/300" alt="Card image cap">
-        <div class="card-block p-3">
-          <h4 class="card-title">Card title</h4>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
-
     </div>
-
-
-
-
-
-
-
 
   </body>
 
+  
+  <script type="text/javascript">
+    function playVideo(){
+      var video = document.querySelector('#videoContainer');
+      video.play();
+      //video.currentTime = 50
+      video.pause();
+      //debugger;
+      src = video.src
+      console.log(src, 'antes', src.includes("#t="))
+      if (src.includes("#t=")) {
+        src = src.replace("#t=", "");
+        console.log(src, 'en el if')
+      }
+      console.log(src, 'durante')
+      video.src = src + "#t=3"
+      video.play();
+      console.log(src, 'despues')
+
+      // var player = videojs('videoContainer');
+
+      // player.offset({
+      //   start: 10,
+      //   end: 300,
+      //   restart_beginning: false //Should the video go to the beginning when it ends
+      // });
+    }
+  </script>
+  <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+  <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="node_modules/vue/dist/vue.min.js"></script>
+  <script src="node_modules/vuex/dist/vuex.min.js"></script>
+
+  <script src ='app/lib/player.js' ></script>
+  <script src="node_modules/video.js/dist/video.min.js"></script>
+  <script src="node_modules/videojs-offset/dist/videojs-offset.min.js"></script>
+  <script src="node_modules/flat-ui/js/bootstrap.min.js"></script>
+  <!--script src="https://vjs.zencdn.net/7.3.0/video.js"></script-->
   <script>
     // You can also require other files to run in this process
 
     require('./renderer.js');
 
   </script>
-
 </html>
