--- a/index_backup.html
+++ b/index_backup.html
@@ -97,6 +97,9 @@
       <div class="form-group">
         <textarea v-model="input" placeholder="Copiar aquí la edición" class="form-control"></textarea>
         <button class="btn btn-success" style="width: 100%;" v-on:click="parseData(input)" >Cargar edicion</button>
+        <button class="btn btn-primary" style="width: 100%;" data-toggle="modal" data-target="#exampleModal">
+  Launch demo modal
+</button>
       </div>
     </div>
 
@@ -130,7 +133,26 @@
         
     </div>
 
-    
+    <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" style="width: 100%;" data-dismiss="modal">Close</button>
+        <button class="btn btn-primary" style="width: 100%;">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 
   </body>
 
